--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.3.1",
-    "nuxt-icon": "^0.3.2",
     "nuxt-simple-sitemap": "^2.1.7",
     "prettier": "^2.8.4",
     "sass": "^1.57.1",
     "sass-loader": "^10.4.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "nuxt-jsonld": "^2.0.7"
   },
   "config": {
