--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nuxt-simple-sitemap": "^2.1.7",
     "prettier": "^2.8.4",
     "sass": "^1.57.1",
-    "sass-loader": "^10.4.1"
+    "sass-loader": "^10.4.1",
+    "swiper": "^9.2.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
