--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "gsap": "^3.11.5",
+    "nuxt-jsonld": "^2.0.8",
     "scrollmagic": "^2.0.8",
     "scrollmagic-plugin-gsap": "^1.0.4"
   },
